tuzatishlar kiritilid
